dataset1235/2025-2/2868285114/users/756942405/executions/3792430146_254684124.log
== SUBMISSION (2025-09-02 22:26:37)
-- CODE: 
idade = int(input("idade: "))
print(idade)
if idade >= 18 :
print("Maior_de_idade")
else: 
print("Menor_de_idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:32:32)
-- CODE: 
idade = int(input("idade: "))
print(idade)
if(idade >= 18):
  print("Maior_de_idade")
else:
  print("Menor_de_idade")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:30:24)
-- CODE: 
idade = int(input("idade: "))
print(idade)
if(idade >= 18):
print("Maior_de_idade")
else: 
print("Menor_de_idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:28:00)
-- CODE: 
idade = int(input("idade: "))
print(idade)
if idade >= 18:
print("Maior_de_idade")
else: 
print("Menor_de_idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print("Maior_de_idade")
    ^
IndentationError: expected an indented block after 'if' statement on line 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
